Add location read page

--- a/src/app/campaign/pages/location-page/location-page.component.html
+++ b/src/app/campaign/pages/location-page/location-page.component.html
@@ -1,1 +1,15 @@
-<p>location-page works!</p>
+@let location = store.location();
+@if (location) {
+  <app-location-template
+    [serverUrl]="serverUrl"
+    [location]="location"
+    [imageServerModel]="store.imageServerModel()"
+    [canCreate]="store.hasWritePermission()"
+    [canUpdate]="store.hasWritePermission()"
+    [canDelete]="store.hasWritePermission()"
+    (createImage)="store.createImage($event, location.pk!)"
+    (updateImage)="store.updateImage($event)"
+    (deleteImage)="store.deleteImage($event.pk!)"
+    (locationDelete)="store.deleteLocation($event)"
+  ></app-location-template>
+}
