--- a/src/design/templates/location-template/location-template.component.html
+++ b/src/design/templates/location-template/location-template.component.html
@@ -11,11 +11,11 @@
     <!-- Heading -->
     <div class="row">
       <h1 class="col-12 location__heading">
-        {{ location.name }}
+        {{ location().name }}
       </h1>
 
       <!-- String indicating all parent_locations -->
-      <ng-container *ngIf="location.parent_location_list?.length ?? 0 > 0">
+      <ng-container *ngIf="location().parent_location_list?.length ?? 0 > 0">
         <h5 class="col-12 location__subheading subheading">
           <ng-container
             *ngFor="let parentLocation of parentLocations; let i = index"
@@ -28,7 +28,7 @@
               [icon]="'arrow-right'"
             ></app-icon>
           </ng-container>
-          {{ location.name }}
+          {{ location().name }}
         </h5>
       </ng-container>
     </div>
@@ -37,12 +37,12 @@
     <div class="location__images">
       <!-- Image Gallery -->
       <app-image-carousel-card
-        [images]="location.images ?? []"
-        [serverUrl]="serverUrl"
-        [serverModel]="imageServerModel"
-        [canUpdate]="canUpdate"
-        [canCreate]="canCreate"
-        [canDelete]="canDelete"
+        [images]="location().images ?? []"
+        [serverUrl]="serverUrl()"
+        [serverModel]="imageServerModel()"
+        [canUpdate]="canUpdate()"
+        [canCreate]="canCreate()"
+        [canDelete]="canDelete()"
         (createImage)="createImage.emit($event)"
         (deleteImage)="deleteImage.emit($event)"
         (updateImage)="updateImage.emit($event)"
@@ -52,7 +52,7 @@
     <div class="mb-3">
       <app-badge-list
         [entries]="markerEntries"
-        [canCreate]="canCreate"
+        [canCreate]="canCreate()"
         [canDelete]="false"
         [label]="'Mapmarker'"
         [createOptions]="{
@@ -63,18 +63,21 @@
     </div>
 
     <!-- Description -->
-    <div class="location__description">
-      <h4>Description</h4>
-      <app-html-text [text]="location.description"></app-html-text>
-    </div>
+    <app-editable-text
+      class="location__description"
+      [heading]="'Description'"
+      [placeholder]="'Add a description for ' + location().name"
+      [text]="location().description"
+      (update)="onDescriptionUpdate($event)"
+    ></app-editable-text>
 
     <!-- Characters of Interest -->
     <div class="location__characters">
       <app-list
         [heading]="'Characters of interest'"
         [entries]="locationCharacters"
-        [enableCreate]="canCreate"
-        [emptyListText]="'You know nobody in ' + location.name"
+        [enableCreate]="canCreate()"
+        [emptyListText]="'You know nobody in ' + location().name"
         (create)="routeToCharacterCreation()"
       ></app-list>
     </div>
@@ -82,8 +85,9 @@
     <!-- Locations of Interest -->
     <div class="encounter-list mb-5 mt-3">
       <app-location-accordion
-        [locations]="location.sublocations ?? []"
-        [canCreate]="canCreate"
+        [locations]="location().sublocations ?? []"
+        [canCreate]="canCreate()"
+        [campaignName]="location().campaign_details?.name!"
       ></app-location-accordion>
     </div>
 
@@ -91,9 +95,9 @@
     <app-article-footer
       [buttonLink]="overviewUrl"
       [buttonLabel]="'Back to Creatures'"
-      [showDelete]="canDelete"
-      [deleteMessage]="'Delete ' + location.name + '?'"
-      (delete)="locationDelete.emit(location)"
+      [showDelete]="canDelete()"
+      [deleteMessage]="'Delete ' + location().name + '?'"
+      (delete)="locationDelete.emit(location())"
     ></app-article-footer>
   </article>
 </app-page-container>
