--- a/src/design/organisms/location-accordion/location-accordion.component.html
+++ b/src/design/organisms/location-accordion/location-accordion.component.html
@@ -4,6 +4,7 @@
   <ng-container *ngIf="canCreate">
     <a class="create-button" [routerLink]="createUrl">
       <app-button
+        title="Create Location"
         [type]="'PRIMARY'"
         [size]="'SMALL'"
         [icon]="'plus'"
