--- a/src/design/organisms/editable-text/editable-text.component.scss
+++ b/src/design/organisms/editable-text/editable-text.component.scss
@@ -4,6 +4,13 @@
 
 .heading {
   margin-bottom: var(--spacer-2);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  &__edit-text {
+    margin: var(--spacer-0) var(--spacer-0) var(--spacer-0) var(--spacer-3);
+  }
 }
 
 .field {
