Add Organization page

--- a/src/app/campaign/pages/organization-page/organization-page.component.html
+++ b/src/app/campaign/pages/organization-page/organization-page.component.html
@@ -1,1 +1,18 @@
-<p>organization-page works!</p>
+@let organization = store.organization();
+
+@if (organization) {
+  <app-organization
+    [organization]="organization"
+    [organizationServerModel]="store.organizationServerModel()"
+    [serverUrl]="serverUrl"
+    [imageServerModel]="store.imageServerModel()"
+    [canUpdate]="store.hasWritePermission()"
+    [canCreate]="store.hasWritePermission()"
+    [canDelete]="store.hasWritePermission()"
+    (createImage)="store.createImage($event, organization.pk!)"
+    (deleteImage)="store.deleteImage($event.pk)"
+    (updateImage)="store.updateImage($event)"
+    (organizationDelete)="store.deleteOrganization($event.pk!)"
+    (organizationUpdate)="store.updateOrganization($event)"
+  ></app-organization>
+}
