--- a/src/design/organisms/quest-table/quest-table.component.scss
+++ b/src/design/organisms/quest-table/quest-table.component.scss
@@ -1,24 +1,24 @@
-@import '/src/screens.scss';
+@import "/src/screens.scss";
 
-:host{
-  --table-bg: var(--bs-gray-dark); 
-  --table-striped-bg: #3a3a3a; 
-  --warning-bg-color: rgba(255, 200, 36, 0.30);
-  --success-bg-color: rgba(147, 196, 125, 0.30);
-  --danger-bg-color: rgba(206, 10, 10, 0.30);
+:host {
+  --table-bg: var(--bs-gray-dark);
+  --table-striped-bg: #3a3a3a;
+  --warning-bg-color: rgba(255, 200, 36, 0.3);
+  --success-bg-color: rgba(147, 196, 125, 0.3);
+  --danger-bg-color: rgba(206, 10, 10, 0.3);
 }
 
-.heading{
+.heading {
   margin-bottom: var(--spacer-3);
-  
-  &__text{
+
+  &__text {
     margin-top: auto;
     margin-bottom: auto;
     padding-left: var(--spacer-0) !important;
     padding-right: var(--spacer-0) !important;
   }
-  
-  &__select{
+
+  &__select {
     background-color: var(--table-striped-bg);
     height: 2rem;
     border: 1px solid var(--table-bg);
@@ -27,55 +27,50 @@
   }
 }
 
-.table{
+.table {
   padding-bottom: var(--spacer-2);
-  
-  &__element{
+
+  &__element {
     padding: var(--spacer-3) var(--spacer-2) !important;
-    
-    :hover{
+
+    :hover {
       color: var(--bs-link-hover-color);
     }
-    
-    &--link{
-      cursor: pointer;
-      text-decoration: underline;
-    }
-    
-    &--desktop-only{
+
+    &--desktop-only {
       display: none;
-      
-      @include media-breakpoint-up(md){
+
+      @include media-breakpoint-up(md) {
         display: table-cell;
       }
     }
-    
-    &--status{
+
+    &--status {
       text-align: center;
       width: var(--spacer-0);
       padding-left: var(--spacer-1);
       padding-right: var(--spacer-1);
     }
   }
-  
-  &-warning{
+
+  &-warning {
     --bs-table-bg: var(--warning-bg-color) !important;
     --bs-table-accent-bg: var(--warning-bg-color) !important;
     --bs-table-striped-bg: var(--warning-bg-color) !important;
     color: var(--bs-white) !important;
   }
-  
-  &-success{
+
+  &-success {
     --bs-table-bg: var(--success-bg-color) !important;
     --bs-table-accent-bg: var(--success-bg-color) !important;
-    --bs-table-striped-bg:var(--success-bg-color) !important;
+    --bs-table-striped-bg: var(--success-bg-color) !important;
     color: var(--bs-white) !important;
   }
-  
-  &-danger{
-    --bs-table-bg:var(--danger-bg-color) !important;
+
+  &-danger {
+    --bs-table-bg: var(--danger-bg-color) !important;
     --bs-table-accent-bg: var(--danger-bg-color) !important;
-    --bs-table-striped-bg:var(--danger-bg-color) !important;
+    --bs-table-striped-bg: var(--danger-bg-color) !important;
     color: var(--bs-white) !important;
   }
 }
