--- a/src/design/templates/location-template/location-template.component.html
+++ b/src/design/templates/location-template/location-template.component.html
@@ -72,6 +72,7 @@
       [heading]="'Description'"
       [placeholder]="'Add a description for ' + location().name"
       [text]="location().description"
+      [canUpdate]="canUpdate()"
       (update)="onDescriptionUpdate($event)"
     ></app-editable-text>
 
