--- a/src/design/organisms/editable-text/editable-text.component.html
+++ b/src/design/organisms/editable-text/editable-text.component.html
@@ -3,79 +3,85 @@
 @if (headingVal) {
   <h4 class="heading">
     <app-html-text [text]="headingVal" />
-    <button class="heading__edit-button" (click)="toggleEdit()">
-      <h6 class="heading__edit-text">
-        (
-        {{ editButtonText() }}
-        <app-icon [icon]="'edit'"></app-icon>
-        )
-      </h6>
-    </button>
+    @if (canUpdate()) {
+      <button class="heading__edit-button" (click)="toggleEdit()">
+        <h6 class="heading__edit-text">
+          (
+          {{ editButtonText() }}
+          <app-icon [icon]="'edit'"></app-icon>
+          )
+        </h6>
+      </button>
+    }
   </h4>
 }
 
 <!-- Text Body -->
-<button
-  class="field field--display"
-  [class.field--hidden]="state() !== 'DISPLAY'"
-  (click)="startEdit()"
->
-  <app-html-text [text]="text() || placeholder()" />
-</button>
-<form
-  class="field field--update"
-  [class.field--hidden]="state() !== 'UPDATE'"
-  (submit)="finishEdit()"
->
-  <editor
-    #editor
-    id="editor"
-    [init]="settings"
-    name="textEditField"
-    [(ngModel)]="textModel"
-    class="mb-2"
-  ></editor>
+@if (canUpdate()) {
+  <button
+    class="field field--display"
+    [class.field--hidden]="state() !== 'DISPLAY'"
+    (click)="startEdit()"
+  >
+    <ng-container *ngTemplateOutlet="textBody" />
+  </button>
+  <form
+    class="field field--update"
+    [class.field--hidden]="state() !== 'UPDATE'"
+    (submit)="finishEdit()"
+  >
+    <editor
+      #editor
+      id="editor"
+      [init]="settings"
+      name="textEditField"
+      [(ngModel)]="textModel"
+      class="mb-2"
+    ></editor>
 
-  <!-- Form Buttons -->
-  <ng-container [ngTemplateOutlet]="formButtons" />
-</form>
-<div
-  class="field field--update"
-  [class.field--hidden]="state() !== 'OUTDATED_UPDATE'"
->
-  <!-- Informating heading -->
-  <app-alert [type]="'INFO'">
-    <app-icon [icon]="'info-circle'"></app-icon>
-    While you were updating this article, somebody else went ahead and updated
-    it as well. Please include their changes in your update before submitting.
-  </app-alert>
+    <!-- Form Buttons -->
+    <ng-container [ngTemplateOutlet]="formButtons" />
+  </form>
+  <div
+    class="field field--update"
+    [class.field--hidden]="state() !== 'OUTDATED_UPDATE'"
+  >
+    <!-- Informating heading -->
+    <app-alert [type]="'INFO'">
+      <app-icon [icon]="'info-circle'"></app-icon>
+      While you were updating this article, somebody else went ahead and updated
+      it as well. Please include their changes in your update before submitting.
+    </app-alert>
 
-  <!-- Textfield-Form -->
-  <div class="flex-column card p-4">
-    <!-- Comparison text -->
-    <div>
-      <h3>Server Version</h3>
-      <app-html-text [text]="serverModel()!" />
+    <!-- Textfield-Form -->
+    <div class="flex-column card p-4">
+      <!-- Comparison text -->
+      <div>
+        <h3>Server Version</h3>
+        <app-html-text [text]="serverModel()!" />
+      </div>
+
+      <app-separator />
+
+      <!-- Actual edit form -->
+      <form (submit)="finishEdit()">
+        <h3>Your Version</h3>
+
+        <editor
+          [init]="settings"
+          name="textEditField"
+          [(ngModel)]="textModel"
+          class="mb-2"
+        ></editor>
+
+        <!-- Form Buttons -->
+        <ng-container [ngTemplateOutlet]="formButtons" />
+      </form>
     </div>
-
-    <app-separator />
-
-    <!-- Actual edit form -->
-    <form (submit)="finishEdit()">
-      <h3>Your Version</h3>
-
-      <editor
-        [init]="settings"
-        name="textEditField"
-        [(ngModel)]="textModel"
-        class="mb-2"
-      ></editor>
-
-      <!-- Form Buttons -->
-      <ng-container [ngTemplateOutlet]="formButtons" />
-    </form>
   </div>
-</div>
+} @else {
+  <ng-container *ngTemplateOutlet="textBody" />
+}
 
 <ng-template #formButtons>
   <div class="field__buttons">
@@ -92,4 +98,8 @@
       [isSubmitButton]="true"
     ></app-button>
   </div>
+</ng-template>
+
+<ng-template #textBody>
+  <app-html-text [text]="text() || placeholder()" />
 </ng-template>
