Add quest create update page

--- a/src/app/campaign/pages/quest-page/quest-page.component.html
+++ b/src/app/campaign/pages/quest-page/quest-page.component.html
@@ -3,8 +3,10 @@
 @if (quest) {
   <app-quest
     [canDelete]="store.hasWritePermission()"
-    [canUpdate]="false && store.hasWritePermission()"
+    [canUpdate]="store.hasWritePermission()"
     [quest]="quest"
     [questServerModel]="store.questServerModel()"
+    (questUpdate)="onQuestUpdate($event)"
+    (questDelete)="onQuestDelete($event.pk!)"
   ></app-quest>
 }
