--- a/src/design/organisms/spell/spell.component.scss
+++ b/src/design/organisms/spell/spell.component.scss
@@ -1,20 +1,20 @@
-:host{
+:host {
   --spell-heading-bg-color: hsla(0, 0%, 100%, 0.05);
   --spell-body-bg-color: rgba(27, 31, 34, 0.95);
 }
 
-.card{
-  &__heading{
+.card {
+  &__heading {
     display: flex;
     justify-content: space-between;
     margin-bottom: var(--spacer-3);
   }
-  
-  &__body{
+
+  &__body {
     margin-bottom: var(--spacer-3);
   }
-  
-  &__delete-confirmer{
+
+  &__delete-confirmer {
     padding-left: var(--spacer-0);
     padding-right: var(--spacer-0);
     display: flex;
@@ -24,54 +24,55 @@
   }
 }
 
-.spell{
-  &__entry{
+.spell {
+  &__entry {
     display: flex;
     flex-direction: column;
     padding: var(--spacer-0);
   }
-  
-  &__heading{
+
+  &__heading {
     border-bottom: solid 1px var(--bs-gray);
     background-color: var(--spell-heading-bg-color);
     padding: var(--spacer-2);
   }
-  
-  &__body{
+
+  &__body {
+    height: 100%;
     background-color: var(--spell-body-bg-color);
     padding: var(--spacer-2);
   }
 }
 
-.heading{
-  &__subtext{
+.heading {
+  &__subtext {
     --bs-text-opacity: 1;
     color: #9b9a9a;
   }
 }
 
-.body{
+.body {
   margin-bottom: var(--spacer-4);
-  
-  &__entry{
+
+  &__entry {
     margin-bottom: var(--spacer-4);
   }
-  
-  &__subheading{
+
+  &__subheading {
     margin-bottom: var(--spacer-1);
   }
-  
-  &__subbody{
+
+  &__subbody {
     display: flex;
     flex-direction: column;
     margin-left: var(--spacer-4);
-    
-    &--list{
+
+    &--list {
       margin-left: var(--spacer-2);
     }
   }
-  
-  &__link{
+
+  &__link {
     width: fit-content;
   }
 }
