--- a/src/design/organisms/spells/spells.component.html
+++ b/src/design/organisms/spells/spells.component.html
@@ -1,5 +1,5 @@
-<div class="container list">  
-  <ng-container *ngIf="canCreate">
+<div class="container list">
+  @if (canCreate) {
     <div class="row list__button">
       <app-button
         class="list__button--button"
@@ -9,31 +9,37 @@
         (click)="addSpell()"
       ></app-button>
     </div>
-  </ng-container>
+  }
 
   <div class="row">
-    <ng-container *ngFor="let card of spellCards; let i = index">
+    @for (card of spellCards; track card.spell.pk) {
       <div class="list__spell-card spell-card">
-        <app-collapsible-panel 
+        <app-collapsible-panel
           [isOpen]="card.isOpen"
           [ngClass]="{
-            'animate__animated animate__zoomIn': card.spell.pk == null
+            'animate__animated animate__zoomIn': card.spell.pk == null,
           }"
-        > 
+        >
           <div heading class="spell-card__heading">
             <span>
-              {{ card.spell.name ?? ''}}
-            </span> 
-            
+              {{ card.spell.name ?? "" }}
+            </span>
+
             <span>
-              <ng-container *ngFor="let connection of card.spell.player_class_connections">
-                <a class="spell-card__class" (click)="spellClassClick.emit(connection.player_class_details)">
+              @for (
+                connection of card.spell.player_class_connections;
+                track connection.pk
+              ) {
+                <button
+                  class="spell-card__class"
+                  (click)="onSpellClassClick($event, connection)"
+                >
                   <app-badge
                     [text]="connection.player_class_details?.name ?? ''"
                     [type]="'DARK'"
                   ></app-badge>
-                </a>
-              </ng-container>
+                </button>
+              }
             </span>
           </div>
           <app-spell
@@ -46,19 +52,18 @@
             [canDelete]="canDelete"
             [canCreate]="canCreate"
             [cancelButtonType]="'DARK'"
-            (spellDelete)="onSpellDelete($event, i)"
+            (spellDelete)="onSpellDelete($event, $index)"
             (spellCreate)="spellCreate.emit($event)"
             (spellUpdate)="spellUpdate.emit($event)"
-            (spellCreateCancel)="removeSpell(i)"
+            (spellCreateCancel)="removeSpell($index)"
             (connectionDelete)="connectionDelete.emit($event)"
             (connectionCreate)="connectionCreate.emit($event)"
           ></app-spell>
         </app-collapsible-panel>
       </div>
-    </ng-container>
+    }
   </div>
 </div>
-
 
 <!-- Loading Spinner -->
 <ng-template #loading><app-spinner></app-spinner></ng-template>
