--- a/src/design/templates/spells-template/spells-template.component.html
+++ b/src/design/templates/spells-template/spells-template.component.html
@@ -21,6 +21,7 @@
       [canUpdate]="canUpdate()"
       [canDelete]="canDelete()"
       [playerClasses]="playerClasses()"
+      [campaignId]="campaignId()"
       (spellDelete)="spellDelete.emit($event)"
       (spellCreate)="spellCreate.emit($event)"
       (spellUpdate)="spellUpdate.emit($event)"
