--- a/src/design/organisms/spells/spells.component.html
+++ b/src/design/organisms/spells/spells.component.html
@@ -1,5 +1,5 @@
 <div class="container list">
-  @if (canCreate) {
+  @if (canCreate()) {
     <div class="row list__button">
       <app-button
         class="list__button--button"
@@ -12,14 +12,33 @@
   }
 
   <div class="row">
-    @for (card of spellCards; track card.spell.pk) {
-      <div class="list__spell-card spell-card">
-        <app-collapsible-panel
-          [isOpen]="card.isOpen"
-          [ngClass]="{
-            'animate__animated animate__zoomIn': card.spell.pk == null,
-          }"
-        >
+    @if (isCreatingSpell()) {
+      <div class="list__spell-card spell-card" [@slideUpFromBottom]>
+        <app-collapsible-panel [isOpen]="true">
+          <div heading class="spell-card__heading">
+            <span>
+              {{ createSpellData().name ?? "" }}
+            </span>
+          </div>
+          <app-spell
+            body
+            class="spell-card__spell"
+            [spell]="createSpellData()"
+            [serverModel]="undefined"
+            [playerClasses]="playerClasses()"
+            [canUpdate]="false"
+            [canDelete]="false"
+            [canCreate]="canCreate()"
+            [cancelButtonType]="'DARK'"
+            (spellCreate)="onSpellCreate($event)"
+            (spellCreateCancel)="cancelSpellCreation()"
+          ></app-spell>
+        </app-collapsible-panel>
+      </div>
+    }
+    @for (card of spellCards(); track card.spell.pk) {
+      <div class="list__spell-card spell-card" [@slideOutFromBottom]>
+        <app-collapsible-panel [isOpen]="card.isOpen">
           <div heading class="spell-card__heading">
             <span>
               {{ card.spell.name ?? "" }}
@@ -46,16 +65,15 @@
             body
             class="spell-card__spell"
             [spell]="card.spell"
-            [serverModel]="serverModel"
-            [playerClasses]="playerClasses"
-            [canUpdate]="canUpdate"
-            [canDelete]="canDelete"
-            [canCreate]="canCreate"
+            [serverModel]="serverModel()"
+            [playerClasses]="playerClasses()"
+            [canUpdate]="canUpdate()"
+            [canDelete]="canDelete()"
+            [canCreate]="canCreate()"
             [cancelButtonType]="'DARK'"
             (spellDelete)="onSpellDelete($event, $index)"
-            (spellCreate)="spellCreate.emit($event)"
             (spellUpdate)="spellUpdate.emit($event)"
-            (spellCreateCancel)="removeSpell($index)"
+            (spellCreateCancel)="cancelSpellCreation()"
             (connectionDelete)="connectionDelete.emit($event)"
             (connectionCreate)="connectionCreate.emit($event)"
           ></app-spell>
