--- a/src/design/organisms/rule/rule.component.html
+++ b/src/design/organisms/rule/rule.component.html
@@ -1,67 +1,58 @@
-<ng-container *ngIf="rule || state === 'CREATE'">
+@if (rule() || state() === "CREATE") {
   <h4 class="card__heading heading">
     <span>
-      <ng-container [ngSwitch]="state">
-        <ng-container
-          *ngSwitchCase="'DISPLAY'"
-          [ngTemplateOutlet]="displayHeading"
-        ></ng-container>
-        <ng-container
-          *ngSwitchCase="'UPDATE'"
-          [ngTemplateOutlet]="updateHeading"
-        ></ng-container>
-        <ng-container
-          *ngSwitchCase="'CREATE'"
-          [ngTemplateOutlet]="createHeading"
-        ></ng-container>
-        <ng-container
-          *ngSwitchCase="'OUTDATEDUPDATE'"
-          [ngTemplateOutlet]="updateHeading"
-        ></ng-container>
-      </ng-container>
+      @switch (state()) {
+        @case ("DISPLAY") {
+          <ng-container [ngTemplateOutlet]="displayHeading" />
+        }
+        @case ("UPDATE") {
+          <ng-container [ngTemplateOutlet]="updateHeading" />
+        }
+        @case ("CREATE") {
+          <ng-container [ngTemplateOutlet]="createHeading" />
+        }
+        @case ("OUTDATED_UPDATE") {
+          <ng-container [ngTemplateOutlet]="updateHeading" />
+        }
+      }
     </span>
-    
-    <ng-container *ngIf="canUpdate">
-      <app-edit-toggle 
-        *ngIf="canUpdate"
+
+    @if (canUpdate() || canCreate()) {
+      <app-edit-toggle
         [buttonType]="'DARK'"
-        [toggled]="state !== 'DISPLAY'"
+        [toggled]="state() !== 'DISPLAY'"
         (toggle)="onToggle($event)"
       ></app-edit-toggle>
-    </ng-container>
+    }
   </h4>
-  
-  <ng-container [ngSwitch]="state">
-    <ng-container
-      *ngSwitchCase="'DISPLAY'"
-      [ngTemplateOutlet]="displayBody"
-    ></ng-container>
-    <ng-container
-      *ngSwitchCase="'UPDATE'"
-      [ngTemplateOutlet]="updateBody"
-    ></ng-container>
-    <ng-container
-      *ngSwitchCase="'CREATE'"
-      [ngTemplateOutlet]="createBody"
-    ></ng-container>
-    <ng-container
-      *ngSwitchCase="'OUTDATEDUPDATE'"
-      [ngTemplateOutlet]="outdatedUpdateBody"
-    ></ng-container>
-  </ng-container>
-</ng-container>
+  @switch (state()) {
+    @case ("DISPLAY") {
+      <ng-container [ngTemplateOutlet]="displayBody" />
+    }
+    @case ("UPDATE") {
+      <ng-container [ngTemplateOutlet]="updateBody" />
+    }
+    @case ("CREATE") {
+      <ng-container [ngTemplateOutlet]="createBody" />
+    }
+    @case ("OUTDATED_UPDATE") {
+      <ng-container [ngTemplateOutlet]="outdatedUpdateBody" />
+    }
+  }
+}
 
 <ng-template #displayHeading>
-  {{ rule?.name }}
+  {{ rule()?.name }}
 </ng-template>
 
 <ng-template #displayBody>
-  <ng-container *ngIf="rule">
-    <app-html-text [text]="rule.description"></app-html-text>
-  </ng-container>
-  
+  @let ruleVal = rule();
+  @if (ruleVal) {
+    <app-html-text [text]="ruleVal.description"></app-html-text>
+  }
+
   <!-- Delete Toggler -->
-  <ng-container *ngIf="canDelete">
+  @if (canDelete()) {
     <app-confirmation-toggle-button
       class="card__delete-confirmer"
       [toggleType]="'DANGER'"
@@ -69,48 +60,45 @@
       [icon]="'trash'"
       (confirm)="onRuleDelete()"
     ></app-confirmation-toggle-button>
-  </ng-container>
+  }
 </ng-template>
 
-<ng-template #updateHeading>
-  Update '{{rule?.name}}'
-</ng-template>
+<ng-template #updateHeading> Update '{{ rule()?.name }}' </ng-template>
 
 <ng-template #updateBody>
-  <app-form 
-    [model]="userModel" 
-    [fields]="formlyFields" 
-    [cancelButtonType]="cancelButtonType"
-    [submitButtonType]="submitButtonType"
-    (formlySubmit)="onRuleUpdate($event)" 
+  <app-form
+    [model]="userModel()"
+    [fields]="formlyFields"
+    [cancelButtonType]="cancelButtonType()"
+    [submitButtonType]="submitButtonType()"
+    (formlySubmit)="onRuleUpdate($event)"
     (formlyCancel)="changeState('DISPLAY', undefined)"
   ></app-form>
 </ng-template>
 
-<ng-template #createHeading>
-  Create new Rule
-</ng-template>
+<ng-template #createHeading> Create new Rule </ng-template>
 
 <ng-template #createBody>
-  <ng-container *ngIf="canCreate">
-    <app-form 
-      [model]="userModel" 
-      [fields]="formlyFields" 
-      [cancelButtonType]="cancelButtonType"
-      [submitButtonType]="submitButtonType"
-      (formlySubmit)="onRuleCreate($event)" 
+  @if (canCreate()) {
+    <app-form
+      [model]="userModel()"
+      [fields]="formlyFields"
+      [cancelButtonType]="cancelButtonType()"
+      [submitButtonType]="submitButtonType()"
+      (formlySubmit)="onRuleCreate($event)"
       (formlyCancel)="onRuleCreateCancel()"
     ></app-form>
-  </ng-container>
+  }
+  <ng-container *ngIf="canCreate"> </ng-container>
 </ng-template>
 
 <ng-template #outdatedUpdateBody>
   <app-compare-form
     [fields]="formlyFields"
-    [modelFromUser]="userModel"
-    [modelFromServer]="serverModel"
+    [modelFromUser]="userModel()"
+    [modelFromServer]="serverModel()"
     [displayVertically]="true"
     (formlySubmit)="onRuleUpdate($event)"
     (formlyCancel)="changeState('DISPLAY', undefined)"
-  ></app-compare-form>    
+  ></app-compare-form>
 </ng-template>
