--- a/src/design/molecules/collapsible-panel/collapsible-panel.component.scss
+++ b/src/design/molecules/collapsible-panel/collapsible-panel.component.scss
@@ -1,16 +1,23 @@
-.card{
+.card {
   padding: var(--spacer-3);
-  
-  &__heading{
+
+  &:focus-within {
+    outline: 1px white solid;
+  }
+
+  &__heading {
     display: flex;
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
     margin-bottom: 0px;
   }
-  
-  &__heading-text{
-    flex: 1;
+
+  &__heading-text {
     margin-right: var(--spacer-4);
+  }
+
+  &__button {
+    outline: none;
   }
 }
