--- a/src/design/organisms/session/session.component.html
+++ b/src/design/organisms/session/session.component.html
@@ -1,102 +1,92 @@
-<ng-container *ngIf="session || state === 'CREATE'">  
-  <!-- Heading -->
-  <h4 class="card__heading heading">
-    <span>
-      <ng-container [ngSwitch]="state">
-        <ng-container
-          *ngSwitchCase="'DISPLAY'"
-          [ngTemplateOutlet]="displayHeading"
-        ></ng-container>
-        <ng-container
-          *ngSwitchCase="'UPDATE'"
-          [ngTemplateOutlet]="updateHeading"
-        ></ng-container>
-        <ng-container
-          *ngSwitchCase="'CREATE'"
-          [ngTemplateOutlet]="createHeading"
-        ></ng-container>
-        <ng-container
-          *ngSwitchCase="'OUTDATEDUPDATE'"
-          [ngTemplateOutlet]="updateHeading"
-        ></ng-container>
-      </ng-container>
-    </span>
+<!-- Heading -->
+<h4 class="card__heading heading">
+  <span>
+    @switch (state()) {
+      @case ("DISPLAY") {
+        <ng-container [ngTemplateOutlet]="displayHeading" />
+      }
+      @case ("UPDATE") {
+        <ng-container [ngTemplateOutlet]="updateHeading" />
+      }
+      @case ("CREATE") {
+        <ng-container [ngTemplateOutlet]="createHeading" />
+      }
+      @case ("OUTDATED_UPDATE") {
+        <ng-container [ngTemplateOutlet]="updateHeading" />
+      }
+    }
+  </span>
 
-    <!-- Edit Toggler -->
-    <app-edit-toggle 
-      *ngIf="canUpdate"
+  <!-- Edit Toggler -->
+  @if (canUpdate()) {
+    <app-edit-toggle
       [buttonType]="'DARK'"
-      [toggled]="state !== 'DISPLAY'"
+      [toggled]="state() !== 'DISPLAY'"
       (toggle)="onToggle($event)"
     ></app-edit-toggle>
-  </h4>
-  
-  <ng-container [ngSwitch]="state">
-    <ng-container
-      *ngSwitchCase="'DISPLAY'"
-      [ngTemplateOutlet]="displayBody"
-    ></ng-container>
-    <ng-container
-      *ngSwitchCase="'UPDATE'"
-      [ngTemplateOutlet]="updateBody"
-    ></ng-container>
-    <ng-container
-      *ngSwitchCase="'CREATE'"
-      [ngTemplateOutlet]="createBody"
-    ></ng-container>
-    <ng-container
-      *ngSwitchCase="'OUTDATEDUPDATE'"
-      [ngTemplateOutlet]="outdatedUpdateBody"
-    ></ng-container>
-  </ng-container>
-</ng-container>
+  }
+</h4>
+
+@switch (state()) {
+  @case ("DISPLAY") {
+    <ng-container [ngTemplateOutlet]="displayBody" />
+  }
+  @case ("UPDATE") {
+    <ng-container [ngTemplateOutlet]="updateBody" />
+  }
+  @case ("CREATE") {
+    <ng-container [ngTemplateOutlet]="createBody" />
+  }
+  @case ("OUTDATED_UPDATE") {
+    <ng-container [ngTemplateOutlet]="outdatedUpdateBody" />
+  }
+}
 
 <ng-template #displayHeading>
-  {{ session?.name }}
-      
-  <ng-container *ngIf="session && session?.start_day != null && session?.end_day != null">
+  {{ session().name }}
+
+  @if (session() && session().start_day != null && session().end_day != null) {
     <span class="heading__subtext">
-      (Days {{ session.start_day }}-{{session.end_day}})
+      (Days {{ session().start_day }}-{{ session().end_day }})
     </span>
-  </ng-container>
+  }
 </ng-template>
 
 <ng-template #displayBody>
   <!-- Body -->
   <div class="card__body body">
-    <ng-container *ngIf="diaryEntries.length > 0">
+    @if (diaryEntries().length > 0) {
       <div class="body__entry">
         <h5 class="body__subheading">
           <app-icon [icon]="'book-open'"></app-icon>
-          Diaryentries 
+          Diaryentries
         </h5>
-        
+
         <ul class="body__subbody body__subbody--list">
-          <ng-container *ngFor="let diaryEntry of diaryEntries; let diaryentryIndex = index">
+          @for (diaryEntry of diaryEntries(); track diaryEntry.link) {
             <li>
               <a [routerLink]="diaryEntry.link" class="body__link">
-                {{diaryEntry.author_name}} - {{diaryEntry.name}}
+                {{ diaryEntry.author_name }} - {{ diaryEntry.name }}
               </a>
             </li>
-          </ng-container>
+          }
         </ul>
       </div>
-    </ng-container>
+    }
 
-    <ng-container *ngIf="session && session.has_recording">
+    @if (session() && session().has_recording) {
       <div class="body__entry">
         <h5 class="body__subheading">
-          <a [routerLink]="sessionAudioUrl" class="body__link">
+          <a [routerLink]="sessionAudioUrl()" class="body__link">
             <app-icon [icon]="'file-audio-o'"></app-icon>
-            Recording 
+            Recording
           </a>
         </h5>
       </div>
-    </ng-container>
-
+    }
   </div>
   <!-- Delete Toggler -->
-  <ng-container *ngIf="canDelete">
+  @if (canDelete()) {
     <app-confirmation-toggle-button
       class="card__delete-confirmer"
       [toggleType]="'DANGER'"
@@ -104,37 +94,32 @@
       [icon]="'trash'"
       (confirm)="onSessionDelete()"
     ></app-confirmation-toggle-button>
-  </ng-container>
-  
+  }
 </ng-template>
 <!-- Sessions Panel Content -->
 
-<ng-template #updateHeading>
-  Updating '{{ session?.name }}''
-</ng-template>
+<ng-template #updateHeading> Updating '{{ session().name }}'' </ng-template>
 
-<ng-template #updateBody>    
+<ng-template #updateBody>
   <!-- Form -->
-  <app-form 
-    [model]="userModel" 
-    [fields]="formlyFields" 
+  <app-form
+    [model]="userModel()"
+    [fields]="formlyFields"
     [cancelButtonType]="'DARK'"
-    (formlySubmit)="onSubmit()" 
+    (formlySubmit)="onSubmit()"
     (formlyCancel)="changeState('DISPLAY', undefined)"
   ></app-form>
 </ng-template>
 
-<ng-template #createHeading>
-  Create new Session
-</ng-template>
+<ng-template #createHeading> Create new Session </ng-template>
 
-<ng-template #createBody>    
+<ng-template #createBody>
   <!-- Form -->
-  <app-form 
-    [model]="userModel" 
-    [fields]="formlyFields" 
+  <app-form
+    [model]="userModel()"
+    [fields]="formlyFields"
     [cancelButtonType]="'DARK'"
-    (formlySubmit)="onSubmit()" 
+    (formlySubmit)="onSubmit()"
     (formlyCancel)="changeState('DISPLAY', undefined)"
   ></app-form>
 </ng-template>
@@ -142,10 +127,10 @@
 <ng-template #outdatedUpdateBody>
   <app-compare-form
     [fields]="formlyFields"
-    [modelFromUser]="userModel"
-    [modelFromServer]="serverModel"
+    [modelFromUser]="userModel()"
+    [modelFromServer]="serverModel()"
     [displayVertically]="true"
     (updateSubmit)="onSubmit()"
     (cancel)="changeState('DISPLAY', undefined)"
-  ></app-compare-form>    
+  ></app-compare-form>
 </ng-template>
